# snake-clone

./: .gitignore  CMakeLists.txt  Makefile  README.md  example_build  main.cpp  snake_clone
src/: common.cpp  common.hpp  main.cpp
src/models/: food.cpp  food.hpp  snake.cpp  snake.hpp
src/modules/: game.cpp  game.hpp  sfx_player.cpp  sfx_player.hpp
